1.5.0 /
[Alexandr Topilski]
- [Redis] Pub/Sub dialog
- [Redis] DECR UI handling
- [Redis] DECRBY UI handling
- [Memcached] INCR UI handling
- [Memcached] DECR UI handling
- [Memcached] Append UI handling
- [Memcached] Prepend UI handling
- [Memcached] Replace UI handling
- [Memcached] Add UI handling

1.4.1 / January 12, 2017
[Alexandr Topilski]
- #19 failled to load xcb plugin

1.4.0 / December 30, 2016 
[Alexandr Topilski]
- Font size preference

1.3.0 / December 17, 2016
[Alexandr Topilski]
- Ui bug fixes
- Validate input
- [Redis] LPUSH UI handling
- [Redis] SADD UI handling
- [Redis] ZADD UI handling
- [Redis] HMSET UI handling
- [Redis] INCR UI handling
- [Redis] INCRBY UI handling
- [Redis] INCRBYFLOAT UI handling
- [Redis] INCRBYFLOAT UI handling
- [Redis] ZETEX UI handling
- [Redis] ZETNX UI handling

1.2.0 / December 3, 2016
[Alexandr Topilski]
- Help command
- Common api for databases
- Update libssh2 sources to version 1.8.0
- [Redis] Load Databases - Amazon Elastic Cache - Redis #65
- [Redis] TTL loop
- [Memcached] TTL loop
- [SSDB] expire, ttl commands
- [SSDB] TTL loop
- [UnQLite] Update sources to version 1.1.7

1.1.1 / November 23, 2016
[Alexandr Topilski]
- [RocksDB] Update sources to version 4.13.0
- [LevelDB] Update sources to version 1.19
- [LMDB] Read only db flag
- [UnQLite] Read only db flag
- Fix rpm package

1.1.0 / November 19, 2016
[Alexandr Topilski]
- UpscaleDB support (Local DB)
- Quit function
- New Connection setting dialog
- Fix spaces in db path

1.0.0 / October 21, 2016
[Alexandr Topilski]
- Sort filter keys
- Bug fixes

0.7.4 / October 15, 2016
[Alexandr Topilski]
- Rename command
- Advanced options for execute command
- Watch key
- Edit key menu
- Check commands args

0.7.3 / October 1, 2016
[Alexandr Topilski]
- [LevelDB] Use folder as db path
- [RocksDB] Use folder as db path
- [LMDB] Use folder as db path
- [Redis] Select db from console
- Console key(set/del/ttl) handling

0.7.2 / September 17, 2016
[Alexandr Topilski]