@@ -3,6 +3,7 @@
 - Pub/Sub dialog
 - DECR UI handling
 - DECRBY UI handling
+- Fix text editor value change
 
 1.4.1 / January 12, 2017
 [Alexandr Topilski]
